# MangaHub

./: .dockerignore  .gitignore  Dockerfile  README.md  app.drawio  hello.py  mangas.txt  nuitka-crash-report.xml  pyproject.toml  requirements.txt
.github/workflows/: versioning.yaml
mangahub/: __init__.py  app_status.py  config.json  directories.py  main.py  modules_init.py  test.py  test.txt  test_md.html  test_md.md
mangahub/application/controllers/: __init__.py  app_controller.py  chapter_image_loader.py  manga_manager.py  novels_manager.py  sites_manager.py
mangahub/application/services/: tile_manager.py
mangahub/config/: __init__.py  app_config.py  app_config_abs.py  color_manager.py
mangahub/config/novels/: global_replace.json
mangahub/controllers/: __init__.py  app_controller.py  chapter_image_loader.py  manga_manager.py  novels_manager.py  placeholder_generator.py  sites_manager.py
mangahub/core/interfaces/: abstract_chapter.py  abstract_media.py
mangahub/core/repositories/: sites_repository.py  states_repository.py
mangahub/data/: manga.json  sites.json
mangahub/domain/interfaces/: abstract_chapter.py  abstract_media.py
mangahub/features/: test.py
mangahub/features/system/: __init__.py  config.py  system.py
mangahub/feautures/system/: system.py
mangahub/gui/: __init__.py  image_decoder.py  main_gui.py
mangahub/gui/gui_utils/: __init__.py  message_manager.py
mangahub/gui/multi_window/: __init__.py  add_manga.py  settings.py
mangahub/gui/utils/: message_manager.py
mangahub/gui/widgets/: __init__.py  action_button.py  complex_layout.py  flow_layout.py  image.py  selection_menu.py  separators.py  svg.py  svg_icon.py
mangahub/infrastructure/repositories/: sites_repository.py  states_repository.py
mangahub/models/: __init__.py  base_model.py  chapter_image.py  image_parsing_method.py  manga.py  manga_chapter.py  manga_state.py  site.py  site_chapter_page.py  url.py
mangahub/models/abstract/: __init__.py  abstract_chapter.py  abstract_media.py  text_element.py  type_enforcer.py
mangahub/models/images/: __init__.py  image_cache.py  image_metadata.py  strip.py
mangahub/models/manga/: __init__.py  chapter_image.py  image_parsing_method.py  manga.py  manga_chapter.py  manga_state.py
mangahub/models/novels/: __init__.py  base_sentence.py  base_word.py  novel.py  novel_chapter.py  novel_formatter.py  novel_paragraph.py  paragraph.py
mangahub/models/sites/: __init__.py  last_chapter_parsing_method.py  site.py  site_chapter_page.py  site_title_page.py
mangahub/models/tags/: ___init__.py  all_tag.py  genre_tag.py  tag.py  tag_model.py
mangahub/presentation/gui/: main_gui.py
mangahub/resources/enums/: __init__.py  icons.py  storage_units.py  strip_quality.py
mangahub/resources/stubs/: ps6.pyi
mangahub/services/: __init__.py  tile_manager.py
mangahub/services/downloaders/: __init__.py  download_manager.py  html_downloader.py  image_downloader.py  (+1 more)
mangahub/ui/: __init__.py  image_decoder.py  main_gui.py
mangahub/utils/: __init__.py  id_from_name.py  image_conversion.py  image_convertion.py  image_dimensions.py  message_manager.py  pyside_threading.py  retry_dec.py  svg_manipulator.py  webp_dimensions.py
mangamanager/: directories.py  main.py  tempCodeRunnerFile.py
mangamanager/config/: __init__.py
mangamanager/controllers/: __init__.py  manga_manager.py
mangamanager/data/: manga.json  mangas.json  mangas_list.json  sites.json
mangamanager/gui/: main_gui.py
mangamanager/handlers/: file_handler.py  json_handler.py
mangamanager/models/: __init__.py  manga.py  manga_chapter.py  manga_chapter_image.py  site.py
mangamanager/parsers/: __init__.py  manga_json_parser.py  site_json_parser.py  sites_json_parser.py
mangamanager/scrapers/: __init__.py  manga_site_scraper.py  manga_title_page_scraper.py
mangareader/config/: __init__.py
mangareader/scraper/: scraper.py
rust/: Cargo.toml  README
rust/ffi/: Cargo.toml
rust/ffi/src/: lib.rs  logger.rs
rust/managers/: .gitignore  Cargo.toml
rust/managers/data/sites/: AsuraScans_ecbd3c5d-2b48-456d-afc9-0092924085af.json
rust/managers/src/: download.rs  lib.rs  manga.rs  sites.rs
rust/managers/test_html/: test.html
rust/managers/tests/: manga_chapter_downloading.rs
rust/managers/tests/setup/: mod.rs  site.rs
rust/models/: Cargo.toml
rust/models-macros/: Cargo.toml
rust/models-macros/src/: lib.rs
rust/models/src/: TODO.md  character.rs  lib.rs  media.rs  novel.rs  registry.rs
rust/models/src/chapter/: chapter.rs  mod.rs  repo_base.rs
rust/models/src/character/: character.rs  mod.rs  repo.rs
rust/models/src/image/: cache.rs  image.rs  mod.rs  pixmap.rs  ram_image.rs
rust/models/src/manga/: chapter.rs  chapters_repo.rs  image.rs  manga.rs  mod.rs  panel.rs  pixmap.rs  repo.rs  strip.rs
rust/models/src/media/: media.rs  mod.rs  repo_base.rs
rust/models/src/novel/: base.rs  chapter.rs  chapters_repo.rs  context.rs  mod.rs  novel.rs  paragraph.rs  repo.rs  sentence.rs  text_element.rs  token.rs  word.rs
rust/models/src/repos/: chapters_repo_base.rs  character_repo.rs  dir_repo.rs  file_repo.rs  mod.rs  repo_base.rs
rust/models/src/site/: chapter_page.rs  extractor.rs  main_page.rs  media_page.rs  mod.rs  repo.rs  site.rs
rust/models/src/theme/: color.rs  mod.rs  repo.rs  theme.rs
rust/services/handlers/: Cargo.toml
rust/services/handlers/src/: file_handler.rs  json_handler.rs  lib.rs  md_handler.rs
rust/services/handlers/src/file/: dir.rs  file.rs  file_base.rs  file_types.rs  fs_handler.rs  json.rs  md.rs  mod.rs  model_file.rs
tests/: conftest.py  example_novel_chapter.txt  image.py  style.css  test.py  test_gui.py  test_tiles_manager.py
tests/data/: edgecases.txt  edgecases_.txt  example.txt  formated_example.txt  manga.json
(+218 files in other folders)
