[project]
name = "mangahub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "bs4>=0.0.2",
    "icecream>=2.1.3",
    "loguru>=0.7.3",
    "pillow>=11.0.0",
    "pyan3>=1.2.0",
    "pydantic>=2.10.4",
    "pyinstaller>=6.11.1",
    "pyside6>=6.8.1,!=6.8.1.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "ruff>=0.8.4",
]
