[project]
name = "mangahub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "bs4>=0.0.2",
    "easy-config-hub",
    "httpx[http2]>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "nuitka>=2.6.7",
    "objsize>=0.7.1",
    "orjson>=3.10.18",
    "pillow>=11.0.0",
    "pillow-jxl-plugin>=1.3.4",
    "pip>=25.0.1",
    "pydantic>=2.10.4",
    "pyenchant>=3.2.2",
    "pyinstaller>=6.11.1",
    "pyside6>=6.8.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "rich>=14.1.0",
    "tenacity>=9.1.2",
    "tomli>=2.2.1",
    "ujson>=5.10.0",
]

[tool.mypy]
python = "3.13"
ignore_missing_imports = true
strict = false

[tool.uv.sources]
easy-config-hub = { path = "../packages/easy-config-hub" }
