[package]
name = "managers"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.8"
models = { path = "../models" }
handlers = { path = "../services/handlers" }

reqwest = { version = "0.12.24", features = ["blocking", "json"] }
tokio = { version = "1.48.0", features = ["full"] }
url = { version = "2.5.7", features = ["serde"] }
bytes = "1.10.1"
