[package]
name = "managers"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.8"
models = { path = "../models" }
handlers = { path = "../services/handlers" }
ffi = { path = "../ffi"}

reqwest = { version = "0.12.24", features = ["blocking", "json"] }
tokio = { version = "1.48.0", features = ["full"] }
url = { version = "2.5.7", features = ["serde"] }
bytes = "1.10.1"
log = "0.4.28"
crossbeam = { version = "0.8.4", features = ["nightly"] }
scraper = { version = "0.24.0", features = ["indexmap", "serde"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "serde"] }
owo-colors = "4.2.3"
indexmap = { version = "2.12.0", features = ["rayon", "serde"] }
slug = "0.1.6"
tokio-stream = { version = "0.1.17", features = ["full"] }
futures = "0.3.31"
async-stream = "0.3.6"
