[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
handlers = { path = "../services/handlers" }
models-macros = { path = "../models-macros" }
spel-right = "0.3.0-rc1"

chrono = { version = "0.4.42", features = ["serde"] }
indexmap = { version = "2.12.0", features = ["rayon", "serde"] }
linkme = "0.3.35"
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["indexmap"] }

[profile.release]
