[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
handlers = { path = "../services/handlers" }
models-macros = { path = "../models-macros" }
spel-right = "0.4.1"

chrono = { version = "0.4.42", features = ["serde"] }
indexmap = { version = "2.12.0", features = ["rayon", "serde"] }
linkme = "0.3.35"
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["indexmap"] }
image = { version = "0.25.8", features = ["serde"] }
jxl-oxide = { version = "0.12.4", features = ["image"] }
size = { version = "0.5.0", features = ["serde"] }
fxhash = "0.2.1"
thiserror = "2.0.17"
bytes = "1.10.1"
url = { version = "2.5.7", features = ["serde"] }
slug = "0.1.6"
scraper = { version = "0.24.0", features = ["indexmap", "serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
log = "0.4.28"
palette = { version = "0.7.6", features = ["serde", "serializing"] }
tokio = { version = "1.48.0", features = ["full"] }
# jpegxl-rs = { version = "0.11.2", features = ["vendored"] }

[profile.release]
