[package]
name = "handlers"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["from", "deref", "deref_mut", "debug", "as_ref", "from_str"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_toml = "0.0.1"
thiserror = "2.0.17"
